<resources>
    <string name="app_name">Health Monitor</string>
    <string name="verifica_tensiunea_arteriala">Verifica tensiunea arteriala</string>
    <string name="tensiune_sistolica">Tensiune sistolica</string>
    <string name="tensiune_diastolica">Tensiune diastolica</string>
    <string name="adauga_inregistrare">Adauga Inregistrare</string>
    <string name="tensiune_arteriala">Tensiune Arteriala</string>
    <string name="adauga_tratament">Adauga Tratament Nou</string>
    <string name="monitorizeaza_parametri">Monitorizeaza Parametri</string>
    <string name="vizualizeaza_statistici">Vizualizeaza Statistici</string>
    <string name="detalii_tratament">Vizualizeaza Detalii Tratament</string>
    <string name="alerta">Alerteaza</string>
    <string name="verifica_puls">Verifica Puls</string>
    <string name="valoare_puls">Valoare Puls</string>
    <string name="puls">Puls</string>
    <string name="denumire_medicament">Denumire Medicament</string>
    <string name="numar_comprimate_pe_zi">Numar Comprimate Pe Zi</string>
    <string name="numar_de_zile_de_tratament">Numar de zile de tratament</string>
    <string name="numar_de_telefon_al_medicului_curant">Numar de telefon al medicului curant</string>
    <string name="glicemie">Glicemie</string>
    <string name="verifica_glicemie">Verifica Glicemie</string>
    <string name="valoare_glicemie">Valoare glicemie</string>
    <string name="spo2">SpO2</string>
    <string name="valoare_spo2">Valoare SpO2</string>
    <string name="verifica_spo2">Verifica SpO2</string>
    <string name="indice_de_stres">Indice de Stres</string>
    <string name="verifica_indice_de_stres">Verifica Indice De Stres</string>
    <string name="valoare_indice_de_stres">Valoare Indice De Stres</string>
    <string name="creeaza_cont">Creeaza Cont</string>
    <string name="parola">Parola</string>
    <string name="email">Email</string>
    <string name="creeare_cont">Creare Cont</string>
    <string name="telefon_persoana_de_contact">Telefon Persoana de Contact</string>
    <string name="cum_monitorizez_corect">Cum monitorizez corect?</string>
    <string name="dashboard">Dashboard</string>
    <string name="alerteaza">Alerteaza</string>
    <string name="telefon_medic_personal">Telefon Medic Personal</string>
    <string name="autentificare">Autentificare</string>
    <string name="tratamente">Tratamente</string>
    <string-array name="parameters_array">
        <item>Alege un parametru…</item>
        <item>Tensiune Arteriala Sistolica</item>
        <item>Tensiune Arteriala Diastolica</item>
        <item>Puls</item>
        <item>Glicemie</item>
        <item>Saturatia de oxigen</item>
        <item>Indice de stres</item>
    </string-array>
    <string-array name="periods_array">
        <item>Alege o perioada…</item>
        <item>Ultimele 3 zile</item>
        <item>Ultima saptamana</item>
        <item>Ultima luna</item>
    </string-array>
</resources>