<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="12dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:id="@+id/medicationCard"
    card_view:cardBackgroundColor="#00FF7F"
    card_view:cardCornerRadius="12dp"
    card_view:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="68dp"
                android:id="@+id/cardMedName"
                android:fontFamily="sans-serif"
                android:text="@string/denumire_medicament"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardMedDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="68dp"
                android:fontFamily="sans-serif"
                android:text="@string/numar_de_zile_de_tratament" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardMedPillsPerDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="38dp"
                android:layout_marginEnd="68dp"
                android:fontFamily="sans-serif"
                android:text="@string/numar_comprimate_pe_zi" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cardDoctorPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="68dp"
                android:fontFamily="sans-serif"
                android:text="@string/numar_de_telefon_al_medicului_curant" />
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>