<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/pulse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/puls"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.099"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084" />

    <ImageButton
        android:id="@+id/pulseInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toEndOf="@+id/pulse"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.084"
        app:srcCompat="@drawable/ic_info_icon"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/checkPulse"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/verifica_puls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pulseInfo"
        app:layout_constraintVertical_bias="0.367" />

    <Button
        android:id="@+id/registerPulse"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/adauga_inregistrare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkPulse"
        app:layout_constraintVertical_bias="0.041" />

    <Button
        android:id="@+id/checkHrGuide"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:text="@string/cum_monitorizez_corect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPulse"
        app:layout_constraintVertical_bias="0.059" />

    <EditText
        android:id="@+id/pulseValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/valoare_puls"
        android:inputType="number"
        android:maxLength="3"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/checkPulse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pulseInfo" />

    <androidx.fragment.app.FragmentContainerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:id="@+id/nav_bar_dashboard"
        tools:layout="@layout/navigation_bar_fragment"
        android:name="com.example.healthMonitorEIM.NavBarFragment"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>