<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/tensiune_sistolica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/tensiune_sistolica"
        android:importantForAutofill="no"
        android:inputType="number"
        android:labelFor="@id/tensiune_sistolica"
        android:maxLength="3"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/verifica"
        app:layout_constraintEnd_toStartOf="@+id/tensiune_diastolica"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TA" />

    <EditText
        android:id="@+id/tensiune_diastolica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/tensiune_diastolica"
        android:importantForAutofill="no"
        android:inputType="number"
        android:labelFor="@id/tensiune_diastolica"
        android:maxLength="3"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:orientation="horizontal"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/verifica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tensiune_sistolica"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifica"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#FF0000"
        android:text="@string/verifica_tensiunea_arteriala"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/adaugaTA"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#FF0000"
        android:text="@string/adauga_inregistrare"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifica"
        app:layout_constraintVertical_bias="0.059" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verificaGhid"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="#FF0000"
        android:text="@string/cum_monitorizez_corect"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adaugaTA"
        app:layout_constraintVertical_bias="0.059" />

    <TextView
        android:id="@+id/TA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tensiune_arteriala"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tensiune_sistolica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/infoTA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tensiune_diastolica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/TA"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.474"
        app:srcCompat="@mipmap/ic_bloodpressire_black_24dp"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/nav_bar_dashboard"
        android:name="com.example.healthMonitorEIM.NavBarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout="@layout/navigation_bar_fragment" />

</androidx.constraintlayout.widget.ConstraintLayout>